# SchoolTelegramBot

./: .dockerignore  Dockerfile  alembic.ini  docker-compose.yml  main.py  pyproject.toml
migrations/: env.py
migrations/versions/: 64351dddc548_added_lesson_location.py  75e6e4a82216_unique_index_for_lesson_dt.py  8f4815a7879e_free_lessons.py  923c4931254d_added_reminder_switch.py  bd101458df85_initial.py  c5a583453c74_gc_event_id.py  c737091a66ad_user_actions.py
voice_bot/: constants.py  logger_configs.py  telegram_di_scope.py  voice_bot_configurator.py
voice_bot/calendar/: google_calendar.py
voice_bot/db/: base_model.py  engine.py  enums.py  models.py  shortcuts.py  update_session.py
voice_bot/domain/: context.py  roles.py
voice_bot/domain/claims/: base.py  non_auth_claim.py  role_claim.py  shortcuts.py
voice_bot/domain/services/: actions_logger.py  admins_service.py  alarm_service.py  book_lesson_service.py  cache_service.py  calendar_sync_service.py  message_builder.py  reminders_service.py  schedule_service.py  spreadsheet_dumper.py  spreadsheet_sync_service.py  user_registration_service.py  users_service.py
voice_bot/domain/utils/: user_utils.py
voice_bot/misc/: cached.py  datetime_service.py  stopwatch.py  user_mock.py
voice_bot/services/: admins_service.py  authorisation.py  cache_service.py  message_builder.py  reminders_service.py  schedule.py  schedule_service.py  user_authorization.py  user_authorization_service.py  users.py  users_service.py
voice_bot/spreadsheets/: admins_table.py  cached_table.py  dumped_table.py  exceptions.py  params_table.py  schedule_table.py  tables_service.py  users_table.py
voice_bot/spreadsheets/google_cloud/: google_admins_table.py  google_params_table.py  (+3 more)
voice_bot/telegram_bot/: base_claim.py  base_handler.py  commands.py  cron_jobs.py  telegram_bot_proxy.py  voice_bot.py  voice_bot_runner.py
(+63 files in other folders)
