[tool.poetry]
name = "schooltelegrambot"
version = "0.1.0"
description = ""
authors = ["xyzzy <xyzzyall@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-telegram-bot = {extras = ["job-queue", "callback-data"], version = "^20.1"}
injector = "^0.20.1"
structlog = "^22.3.0"
gspread = "^5.7.2"
contextvars = "^2.4"
sqlalchemy = "^2.0.4"
aiosqlite = "^0.18.0"
alembic = "^1.9.4"
asyncpg = "^0.27.0"
colorama = "^0.4.6"
gcsa = "^2.1.0"
sortedcontainers = "^2.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
