[tool.poetry]
name = "schooltelegrambot"
version = "0.1.0"
description = ""
authors = ["xyzzy <xyzzyall@outlook.com>"]
readme = "README.md"
packages = [{ include = "voice_bot" }]

[tool.poetry.dependencies]
python = "^3.12"
python-telegram-bot = {extras = ["job-queue", "callback-data"], version = "^20.4"}
injector = "^0.21.0"
structlog = "^23.1.0"
gspread = "^5.10.0"
contextvars = "^2.4"
sqlalchemy = "^2.0.20"
aiosqlite = "^0.19.0"
alembic = "^1.11.3"
asyncpg = "^0.29.0"
colorama = "^0.4.6"
gcsa = "^2.1.0"
sortedcontainers = "^2.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
